--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section class=" overflow-auto">
     <div class="inner lage-inner m-auto mt-4">
       <form class="position-relative ">
-        <input type="text" class="form-control input-search" placeholder="find your location ">
+        <input type="text" class="form-control input-search" placeholder="find your location... ">
         <input type="button" value="Find" class="px-5 text-center py-2 botn-input ">
       </form>
       <div class="weather-stat">
